Removing overflow-y:scroll; declaration for now. Is causing issues.

--- a/sites/all/themes/ginkgo/style.css
+++ b/sites/all/themes/ginkgo/style.css
@@ -98,7 +98,6 @@ a.user-picture {
 
   div.messages div.message-content {
     max-height:400px;
-    overflow-y:scroll;
     padding:10px;
     }
 
